Ensure image doesnt overlap with links

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -108,7 +108,7 @@ p.cvheader{
   font-size: 20px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1000px) {
     .profile {
       display:none;
     }
